--- a/html/about.html
+++ b/html/about.html
@@ -21,8 +21,8 @@
 
     <div class="navbar">
         <div class="logo">
-            <img src="../images/logo.png" alt="" class="logo1">
-            <img src="../images/logo2.png" alt="" class="logo2">
+            <a href="../index.html">  <img src="../images/logo.png" alt="" class="logo1"></a>
+            <a href="../index.html"><img src="../images/logo2.png" alt="" class="logo2"></a>
         </div>
         <ul>
             <a href="../index.html" class="nav_list">home</a>
