--- a/html/contact.html
+++ b/html/contact.html
@@ -20,8 +20,8 @@
     <!-- ===============================NAVBAR===================================== -->
     <div class="navbar">
         <div class="logo">
-            <img src="../images/logo.png" alt="" class="logo1">
-            <img src="../images/logo2.png" alt="" class="logo2">
+            <a href="../index.html">  <img src="../images/logo.png" alt="" class="logo1"></a>
+            <a href="../index.html"><img src="../images/logo2.png" alt="" class="logo2"></a>
         </div>
         <ul>
             <a href="../index.html" class="nav_list">home</a>
