--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <!-- ==================================================navbar================================= -->
     <div class="navbar">
         <div class="logo">
-            <img src="images/logo.png" alt="" class="logo1">
-            <img src="images/logo2.png" alt="" class="logo2">
+          <a href="index.html">  <img src="images/logo.png" alt="" class="logo1"></a>
+            <a href="index.html"><img src="images/logo2.png" alt="" class="logo2"></a>
         </div>
         <ul>
-            <a href="html/index.html" class="nav_list">home</a>
+            <a href="index.html" class="nav_list">home</a>
             <a href="html/about.html" class="nav_list">about</a>
             <a href="html/product.html" class="nav_list">product</a>
             <a href="html/contact.html" class="nav_list">contact</a>
